add services tests